<resources>
    <string name="app_name">Skool Workshops</string>
    <string name="title_home">Thuis</string>
    <string name="title_workshop">Workshop</string>
    <string name="title_workshops">Workshops</string>
    <string name="title_workshops_categories">Workshop Categorieën</string>

    <string name="title_workshop_visual_arts">Beeldende Kunst</string>
    <string name="title_graffiti">Graffiti</string>
    <string name="title_light_graffiti">Light Graffiti</string>
    <string name="title_stop_motion">Stop Motion</string>
    <string name="title_tshirt_design">T-shirt Ontwerpen</string>
    <string name="title_workshop_dance">Dans</string>
    <string name="title_breakdance">Breakdance</string>
    <string name="title_dance_fit">Dance-Fit</string>
    <string name="title_flashmob">Flashmob</string>
    <string name="title_hiphop">HipHop</string>
    <string name="title_modern_dance">Moderne Dans</string>
    <string name="title_stepping">Stepping</string>
    <string name="title_streetdance">Streetdance</string>
    <string name="title_workshop_media">Media</string>
    <string name="title_photoshop">Photoshop</string>
    <string name="title_vlogging">Vloggen</string>
    <string name="title_smartphone_photography">Smartphone Fotografie</string>
    <string name="title_videoclip">Video Clip maken</string>
    <string name="title_workshop_music">Muziek</string>
    <string name="title_caribbean_drums">Caribbean Drums</string>
    <string name="title_ghetto_drums">Ghetto Drums</string>
    <string name="title_live_looping">Live Looping</string>
    <string name="title_percussie">Percussie</string>
    <string name="title_popstar">Popstar</string>
    <string name="title_rap">Rap</string>
    <string name="title_workshop_sport">Sport</string>
    <string name="title_bootcamp">Bootcamp</string>
    <string name="title_capoeira">Capoeira</string>
    <string name="title_freerunning">Freerunning</string>
    <string name="title_kickboxen">Kickboxen</string>
    <string name="title_panna_football">Panna Voetbal</string>
    <string name="title_selfdefence">Zelfverdediging</string>
    <string name="title_workshop_theatre">Theater</string>
    <string name="title_soap_acting">Soap Acteren</string>
    <string name="title_stage_fighting">Stage Fighting</string>
    <string name="title_theatre_sport">Theatersport</string>
    <string name="title_shopping_cart">Winkelmand</string>
    <string name="description_delete">Delete</string>
    <string name="title_culture_day">Cultuurdag</string>
    <string name="title_contact">Contact</string>
    <string name="title_more">Meer</string>
    <string name="title_login">Aanmelden</string>
    <string name="title_logout">Uitloggen</string>
    <string name="title_register">Registreren</string>
    <string name="lorem_ipsum">Lorem ipsum blablabla</string>
    <string name="title_loyalty_points">Spaarpunten</string>
    <string name="title_newsletter">Nieuwsbrief</string>
    <string name="greeting">Welkom</string>
    <string name="txt_book_workshop">Boek Workshop</string>
    <string name="txt_book_culture_day">Boek Cultuurdag</string>
    <string name="iv_newsletter_content">Nieuwsletter afbeelding</string>
    <string name="iv_loyalty_points_content">Spaarpunten afbeelding</string>
    <string name="title_popular_workshops">Populaire Workshops</string>
    <string name="iv_popular_workshops_content">Populaire workshops afbeelding</string>
    <string name="title_book_workshop">Boek Workshop</string>
    <string name="title_participants">Totale aantal deelnemers * (+€7,50)</string>
    <string name="title_rounds">Aantal workshoprondes</string>
    <string name="title_minutes">Aantal minuten per workshopronde</string>
    <string name="title_timetable">Tijdschema</string>
    <string name="title_learning_level">Leerniveau</string>
    <string name="subtotal">Subtotaal</string>
    <string name="book_now">BOEK NU</string>
    <string name="text_minutes">Totaal aantal minuten</string>
    <string name="contact_title">Contact</string>

    <string name="navigation_shopping_cart">Winkelwagen</string>
    <string name="navigation_about_us">Over ons</string>
    <string name="quiz">Quiz</string>
    <string name="information">Gegevens</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="payment">Afrekenen</string>
    <string name="title_invoice_details">Factuur Gegevens</string>
    <string name="firstname">Voornaam</string>
    <string name="lastname">Achternaam</string>
    <string name="adres">Straat en huisnummer</string>
    <string name="company_name">Bedrijfsnaam (optioneel)</string>
    <string name="place">Plaats </string>
    <string name="postalcode">Postcode</string>
    <string name="phonenumber">Telefoonnummer</string>
    <string name="email">E-mailadres</string>
    <string name="cjp">CJP nummer (optioneel)</string>
    <string name="place_order">Bestelling plaatsen</string>
    <string name="use_online_registration_system">Wil je gebruik van ons online inschrijfsysteem? (optioneel)</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>
    <string name="read_about_it">Lees meer hierover</string>
    <string name="privacy">Je persoonlijke gegevens zullen worden gebruikt om je bestelling te verwerken, om je beleving op deze website te optimaliseren en voor andere doeleinden zoals beschreven in onze privacybeleid.</string>
    <string name="ideal">iDEAL</string>
    <string name="direct_payment">Directe bankoverschrijving</string>

    <string name="newsletterText">De nieuwste nieuwsbrief van Skoolworkshop! Lees meer hier!</string>
    <string name="loyaltypointsText">U heeft 1000 spaarpunten</string>
    <string name="populaireworkshopstext">Alle populaire workshops</string>
    <string name="msg_token_fmt">msg_token_fmt</string>
    <string name="default_notification_channel_id">Default_notifaction_channel</string>
    <string name="handle_notifaction_now">New notication</string>
</resources>