<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_home"
        tools:context=".ui.home.HomeFragment"
        android:layout_marginBottom="20sp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cl_home_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@drawable/skool_home_background"
                android:paddingBottom="15dp">


                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/orange"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/register_button"
                        android:layout_margin="5sp"
                        android:textSize="11sp"
                        android:text="@string/title_login"
                        android:visibility="visible"/>

                    <Button
                        android:id="@+id/register_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/orange"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="5sp"
                        android:layout_marginStart="5sp"
                        android:text="@string/title_register"
                        android:textSize="11sp"
                        android:visibility="visible"
                        android:layout_marginEnd="15sp"/>

                    <Button
                        android:id="@+id/logout_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/orange"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/iv_home_bell"
                        android:layout_margin="5sp"
                        android:text="@string/title_logout"
                        android:textSize="12sp"
                        android:visibility="gone"/>

                    <ImageView
                        android:id="@+id/iv_home_bell"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="visible"
                        android:layout_marginEnd="15sp"
                        android:src="@drawable/ic_bell"
                        android:background="@drawable/bell_background"
                        android:padding="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"/>


                <TextView
                    android:id="@+id/text_view_greeting"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="90sp"
                    android:text="@string/greeting"
                    android:layout_marginTop="11sp"
                    android:layout_marginStart="12dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:background="@drawable/greeting_background"/>

                <Button
                    android:id="@+id/button_book_workshop"
                    android:layout_width="160sp"
                    android:layout_height="80sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_greeting"
                    android:layout_marginTop="40sp"
                    android:layout_marginStart="15sp"
                    android:text="@string/txt_book_workshop"
                    android:backgroundTint="@color/orange"/>

                <Button
                    android:id="@+id/button_book_culture_day"
                    android:layout_width="160sp"
                    android:layout_height="80sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_greeting"
                    android:layout_marginTop="40sp"
                    android:layout_marginEnd="15sp"
                    android:text="@string/txt_book_culture_day"
                    android:backgroundTint="@color/orange"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/home_item_border"
            android:id="@+id/home_item_loyalty_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_home_background"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:visibility="gone"
            >

            <ImageView
                android:contentDescription="@string/iv_loyalty_points_content"
                android:id="@+id/home_item_loyalty_points_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:src="@drawable/loyaltypoints"
                />

            <TextView
                android:id="@+id/home_item_loyalty_points_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/home_item_loyalty_points_image"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/title_loyalty_points"
                android:layout_margin="10dp"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/home_item_loyalty_points_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/home_item_loyalty_points_image"
                app:layout_constraintTop_toBottomOf="@+id/home_item_loyalty_points_head"
                android:text="@string/loyaltypointsText"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:ellipsize="end"
                android:maxLines="2"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/home_item_border"
            android:id="@+id/home_item_popular_workshops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_item_loyalty_points"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <ImageView
                android:contentDescription="@string/iv_popular_workshops_content"
                android:id="@+id/home_item_popular_workshops_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:src="@drawable/kunst"/>

            <TextView
                android:id="@+id/home_item_popular_workshops_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/home_item_popular_workshops_image"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/title_popular_workshops"
                android:layout_margin="10dp"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/home_item_popular_workshops_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/home_item_popular_workshops_image"
                app:layout_constraintTop_toBottomOf="@+id/home_item_popular_workshops_head"
                android:text="@string/populaireworkshopstext"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:ellipsize="end"
                android:maxLines="2"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/home_item_border"
            android:id="@+id/home_item_newsletter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_item_popular_workshops"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp">

            <ImageView
                android:contentDescription="@string/iv_newsletter_content"
                android:id="@+id/home_item_newsletter_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:src="@drawable/imageedit_3_6513785217" />

            <TextView
                android:id="@+id/home_item_newsletter_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/home_item_newsletter_image"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/title_newsletter"
                android:layout_margin="10dp"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/home_item_newsletter_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/home_item_newsletter_image"
                app:layout_constraintTop_toBottomOf="@+id/home_item_newsletter_head"
                android:text="@string/newsletterText"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:ellipsize="end"
                android:maxLines="2"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
